newsite/home.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
@import url(//fonts.googleapis.com/earlyaccess/nicomoji.css);
@import url(//fonts.googleapis.com/earlyaccess/nikukyu.css);
@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500;800&display=swap');

:root{
    --main-color: #101424;
  }

body {
    background-color: #121e31;
    margin: 0;
    padding: 0;
    overflow: hidden;
  }

  /* Create a container for the stars */
  #stars {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
  }

  /* Define the star styling */
  .star {
    position: absolute;
    background-color: #FFF;
    width: 2px;
    height: 2px;
    border-radius: 50%;
    opacity: 1; /* Set the initial opacity to 1 */
    animation: twinkling linear infinite;
  }

  /* Define the twinkling animation */
  @keyframes twinkling {
    0% {
      opacity: 0;
      transform: translate(0, 0);
    }
    50% {
      opacity: 1;
      transform: translate(-6px, 12px);
    }
    100% {
      opacity: 0;
      transform: translate(0, 0);
    }
  }

/* -------------------- BOX ------------------------ */

.box {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    /* width: calc(55% - 28px);
    height: 75vh; */
    width: 65%;
    /* max-width: 600px; */
    height: 75vh;
    background-color: #101424; /* Slightly darker background color */
    border: 2px solid #19273c;
    display: flex;
    flex-direction: column;
    opacity: 0;
    animation: fade-in 1s forwards; /* Apply the fade-in animation */
}

@keyframes fade-in {
    from {
        top: -50%;
        opacity: 0;
    }
    to {
        top: 50%;
        opacity: 1;
    }
}

.left-section {
  width: 80%;
  height: 200px;
  background-image: url(./images/91882132_p0.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  font-family: 'Montserrat', sans-serif;
}

.right-section {
  flex: 1;
  overflow-y: auto;
  padding: 20px;
  font-family: 'Montserrat', sans-serif;
  color: white; /* placeholder, change later */
  max-height: 300px; /* THIS MIGHT POSE A PROBLEM LATER PEPELAUGH */
}


/* Styles for desktop screens */
@media (min-width: 768px) {
  .box {
    flex-direction: row;
  }

  .left-section {
    width: 33%;
    height: auto;
  }

  .right-section {
    width: 50%;
    padding: 20px;
    font-family: 'Montserrat', sans-serif;
    color: white;
  }
}

/* Styles for mobile screens */
@media (max-width: 767px) {
  .box {
    flex-direction: column;
    height: auto;
  }

  .left-section {
    width: 100%;
    height: 300px;
  }

  .right-section {
    width: 100%;
    padding: 20px;
    font-family: 'Montserrat', sans-serif;
    color: white;
    font-size: 10px;
    max-width: fit-content; /* POG, POTENTIAL FIX??????? */
  }
}



/* -------------------------------------- JAP TEXT BOTTOM -------------------- */

.caption {
    position: absolute;
    bottom: 3%;
    left: 50%;
    transform: translateX(-50%);
    color: white;
    font-family: 'Montserrat', sans-serif;
    font-size: 15px;
    opacity: 0.5;
  }

.jap-text{
    color: #7280b8;
    opacity: 0.9; 
    font-weight: 500;
    letter-spacing: 5px;
    font-family: 'Nico Moji', cursive;
}

